--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -27,7 +27,7 @@ nav
 footer
 {
 	border-top: 2px solid #333333;
-	padding: 10px;
+	padding: 10px 0;
 	background-color: #222222;
 	color: white;
 }
